# Python-SFA

./: .gitignore  EXAMPLE_1_artificial_data.py  EXAMPLE_2_produc.py  EXAMPLE_script.py  README.md  inefficiency.py  logLikelihoods.py  posteriors.py  priors.py  pyproject.toml  scores.py  sfa.py  sfa2.py
.github/workflows/: publish-to-pypi.yml
examples/: ex1_artificial_data.py  ex2_produc.py
examples/data/: dane.xlsx
src/sfa/: __init__.py  inefficiency.py  logLikelihoods.py  posteriors.py  priors.py  scores.py  sf_model.py  sfa.py
