[build-system]
requires = ['setuptools>=77']
build-backend = 'setuptools.build_meta'

[project]
name = 'stochastic-frontier-analysis'
version = '1.0.1'
description = 'Estimation of cross-sectional and panel stochastic frontier models'
readme = 'README.md'
requires-python = '>=3.10'
license = 'MIT'

authors = [
    {name = 'Kamil Makieła'}
]

keywords = [
    'stochastic frontier analysis',
    'stochastic frontier models',
    'frontier analysis',
    'technical efficiency',
    'productive efficiency',
    'economics',
    'econometrics',
    'statistics',
    'maximum likelihood',
    'Bayesian estimation',
    'panel data',
    'cross-sectional data',
    'normal-exponential model',
    'normal-half-normal model'
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules'
]

dependencies = [
    'numpy>=1.24',
    'scipy>=1.10',
    'pandas>=2.0'
]

[project.optional-dependencies]
examples = [
    'openpyxl>=3.1'
]

[project.urls]
Homepage = 'https://github.com/KamilMakiela/Python-SFA'
Repository = 'https://github.com/KamilMakiela/Python-SFA'
Issues = 'https://github.com/KamilMakiela/Python-SFA/issues'

[tool.setuptools.packages.find]
where = ['src']
include = ['sfa*']
